# workstation

./: .env  .gitignore  .gitlab-ci.yml  README  docker-compose.yml  fix_sh_newline.py  init-mongo.sh  install_system.sh  mongo-init.js  update_system.sh
.github/workflows/: gitlab-sync.yml
backend/: Dockerfile  migrate.sh  pyproject.toml
backend/app/: config.py  logger.py  main.py  worker.py
backend/app/db/: db_utils.py  engine.py  events.py  system_settings.py
backend/app/migrations/: 20210302104647_pack_states.py  20210312063035.py  20210623075307.py
backend/app/models/: cube.py  event.py  message.py  mode.py  model_config.py  multipack.py  pack.py  packing_table.py  pintset_record.py  pintset_task.py  production_batch.py  qr_list.py  report.py  system_devices.py  system_settings.py  system_status.py
backend/app/models/system_settings/: desync_settings.py  email_settings.py  erd_settings.py  general_settings.py  location_settings.py  pintset_settings.py  system_settings.py  telegram_settings.py
backend/app/routers/: cameras.py  cubes.py  custom_routers.py  events.py  multipacks.py  packs.py  pintset_tasks.py  production_batches.py  system_settings.py  system_status.py  workmode.py
backend/app/utils/: background_tasks.py  email.py  erd.py  io.py  naive_current_datetime.py  pintset.py
frontend/: .eslintrc.js  .gitignore  Dockerfile  jsconfig.json  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.js  App.tsx  Test.js  address.js  fonts.css  fonts.scss  index.css  index.js  index.scss  index.tsx  reportWebVitals.tsx  store.tsx  theme.js  theme.scss
ssl-certification/: create_domain_cert.sh  create_root_cert.sh  readme.md  rootCA.crt  rootCA.key  v3.ext
(+100 files in other folders)
