[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maksim Zayakin <maksim.zaiakin@urfu.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
orjson = "^3.4.1"
uvicorn = "^0.13.2"
fastapi-versioning = "^0.5.0"
odmantic = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
